bug fix : read annotation reflectively